--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
                 <div class="category-card">
                     <img src="img/pizza.png" alt="pizza png">
                     <h3>Pizzas</h3>
-                    <span class="arrow-icon">→</span>
+                    <a href="pizzas.html"><span class="arrow-icon">→</span></a>
                 </div>
                 <div class="category-card">
                     <img src="img/hamburguer.png" alt="hamburguer png">
